<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    Since this screen is very simple, I will use LinearLayout.
    My main question here is:
    Why does the button at the end fills the rest of the space in the layout,
    and not the hole screen(Since height is set to match parent)? -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".WelcomeFragment"
        android:weightSum="3">

        <TextView
            android:id="@+id/textView"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="serif-monospace"
            app:autoSizeMaxTextSize="100sp"
            android:text="@string/welcome_message"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/second_instructions"
            app:autoSizeMaxTextSize="100sp"
            android:textSize="36sp" />

        <Button
            android:id="@+id/instructions_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/btn_bg_red"
            android:text="@string/button_instruction_message"
            android:textSize="36sp" />
    </LinearLayout>
</layout>