<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<!--Its easier to make it a constraint layour because of the chaining.
    It all fits together nicely. I am using a newDog variable to contain
    the input data-->

    <data>
        <variable
            name="newDog"
            type="com.udacity.shoestore.models.Dog" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailFragment">

        <TextView
            android:id="@+id/text_name"
            style="@style/item_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            app:layout_constraintBottom_toTopOf="@+id/edit_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="@string/name"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={newDog.name}"
            android:hint="@string/name"
            app:layout_constraintBottom_toTopOf="@+id/text_description"
            app:layout_constraintStart_toStartOf="@+id/text_name"
            app:layout_constraintTop_toBottomOf="@+id/text_name" />

        <EditText
            android:id="@+id/edit_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="@string/description"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName"
            android:text="@={newDog.description}"
            app:layout_constraintBottom_toTopOf="@+id/text_power_level"
            app:layout_constraintStart_toStartOf="@+id/text_description"
            app:layout_constraintTop_toBottomOf="@+id/text_description" />

<!--    If you are seeing this, please let me know how I could avoid using the ` `
        to auto convert the double to string in the below editText-->
        <EditText
            android:id="@+id/edit_power_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="@string/power_level"
            android:ems="10"
            android:hint="@string/power_level"
            android:inputType="number|numberDecimal"
            android:text="@={`` + newDog.size}"
            app:layout_constraintBottom_toTopOf="@+id/text_company"
            app:layout_constraintStart_toStartOf="@+id/text_power_level"
            app:layout_constraintTop_toBottomOf="@+id/text_power_level" />

        <EditText
            android:id="@+id/edit_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="@string/company"
            android:ems="10"
            android:hint="@string/company"
            android:inputType="textPersonName"
            android:text="@={newDog.company}"
            app:layout_constraintBottom_toTopOf="@+id/cancel_button"
            app:layout_constraintStart_toStartOf="@+id/text_company"
            app:layout_constraintTop_toBottomOf="@+id/text_company" />

        <TextView
            android:id="@+id/text_company"
            style="@style/item_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/company"
            app:layout_constraintBottom_toTopOf="@+id/edit_company"
            app:layout_constraintStart_toStartOf="@+id/edit_power_level"
            app:layout_constraintTop_toBottomOf="@+id/edit_power_level" />

        <TextView
            android:id="@+id/text_power_level"
            style="@style/item_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/power_level"
            app:layout_constraintBottom_toTopOf="@+id/edit_power_level"
            app:layout_constraintStart_toStartOf="@+id/edit_description"
            app:layout_constraintTop_toBottomOf="@+id/edit_description" />

        <TextView
            android:id="@+id/text_description"
            style="@style/item_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            app:layout_constraintBottom_toTopOf="@+id/edit_description"
            app:layout_constraintStart_toStartOf="@+id/edit_name"
            app:layout_constraintTop_toBottomOf="@+id/edit_name" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/example_image"
            android:src="@drawable/d5"
            app:layout_constraintBottom_toTopOf="@+id/text_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edit_company" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintTop_toTopOf="@+id/cancel_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>